fix(platform): fix echat tooltip overflow hidden

--- a/packages/platform/src/styles/components/chart.scss
+++ b/packages/platform/src/styles/components/chart.scss
@@ -8,6 +8,5 @@
     right: 0;
     bottom: 0;
     left: 0;
-    overflow: hidden;
   }
 }
